apps/docling/deployment.yaml
  namespace: docling-test-poc
spec:
  accessModes:
    - ReadWriteOnce
  storageClassName: lvm-local
  resources:
    requests:
      storage: 50Gi
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docling-serve
  namespace: docling-test-poc
  labels:
    app.kubernetes.io/name: docling-serve
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: docling-serve
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docling-serve
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        accelerator: nvidia-v100
      terminationGracePeriodSeconds: 60
      securityContext:
        seccompProfile:
          type: RuntimeDefault
       #
      # FIX PVC OWNERSHIP
      #
      containers:
        - name: docling-serve
          image: ghcr.io/java4all/ai/docling-serve-ocr:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP
          resources:
            requests:
              cpu: "16"
              memory: "32Gi"
              nvidia.com/gpu.shared: 1
            limits:
              cpu: "48"
              memory: "128Gi"
              nvidia.com/gpu.shared: 1
          volumeMounts:
            - name: artifacts
              mountPath: /opt/app-root/src/artifacts
            - name: scratch
              mountPath: /tmp/docling
          startupProbe:
            httpGet:
              path: /docs
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /docs
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /docs
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: artifacts
          persistentVolumeClaim:
            claimName: docling-artifacts
        - name: scratch
          emptyDir:
            sizeLimit: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: docling-serve
  namespace: docling-test-poc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: docling-serve
  ports:
    - name: http
      port: 5001
      targetPort: http
      protocol: TCP
