apps/docling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docling-serve
  namespace: docling
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: docling-serve
  ports:
    - name: http
      port: 5001
      targetPort: http
      protocol: TCP
