apps/docling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "DOCLING_UI_STICKY"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.sameSite: "lax"
  name: docling
  namespace: docling
spec:
  ingressClassName: traefik
  rules:
  - host: docling.apps.rancher-poc.ad.curia.europa.eu
    http:
      paths:
      - backend:
          service:
            name: docling-serve
            port:
              number: 5001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - docling.apps.rancher-poc.ad.curia.europa.eu
    secretName: wildcard-docling-poc
